force-app/main/default/objects/Lead_Route_Snapshot__c/Lead_Route_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Route snapshot for Loop2 routing decisions</description>
    <label>Lead Route Snapshot</label>
    <nameField>
        <label>Lead Route Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Route Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>