force-app/main/default/objects/Lead_Route_Snapshot__c/fields/Act_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Act_Snapshot__c</fullName>
    <label>Act Snapshot</label>
    <type>Lookup</type>
    <referenceTo>Lead_Act_Snapshot__c</referenceTo>
    <relationshipLabel>Route Snapshots</relationshipLabel>
    <relationshipName>Route_Snapshots</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>