force-app/main/default/objects/Lead_Route_Snapshot__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <type>Lookup</type>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Route Snapshots</relationshipLabel>
    <relationshipName>Route_Snapshots</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>