force-app/main/default/objects/Lead_Route_Snapshot__c/fields/Commission_Tier__c.field-meta.xml
<CustomField>
    <fullName>Commission_Tier__c</fullName>
    <label>Commission Tier</label>
    <type>Text</type>
    <length>50</length>
</CustomField>