force-app/main/default/objects/Lead_Route_Snapshot__c/fields/Route_Destination__c.field-meta.xml
<CustomField>
    <fullName>Route_Destination__c</fullName>
    <label>Route Destination</label>
    <type>Text</type>
    <length>255</length>
</CustomField>